--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -14,3 +14,56 @@
 .v-breadcrumbs li:nth-child(2n){
     padding:0 4px;
 }
+
+.swing{
+    animation: swing ease-in-out 1s infinite alternate;
+    transform-origin: center -20px;
+}
+.swing:after{
+    content: '';
+    position: absolute;  
+    width: 20px; height: 20px;  
+    border: 1px solid #999;
+    top: -10px; left: 50%;
+    z-index: 0;
+    border-bottom: none;
+    border-right: none;
+    transform: rotate(45deg);
+}
+/* nail */
+.swing:before{
+    content: '';
+    position: absolute;
+    width: 5px; height: 5px;
+    top: -14px;left: 54%;
+    z-index: 5;
+    border-radius: 50% 50%;
+    background: #000;
+}
+
+.swing:hover {
+    /* Start the shake animation and make the animation last for 0.5 seconds */
+    animation: shake 1.25s; 
+    /* When the animation is finished, start again */
+    animation-iteration-count: infinite; 
+}
+ 
+@keyframes swing {
+    0% { transform: rotate(3deg); }
+    100% { transform: rotate(-3deg); }
+}
+
+
+@keyframes shake {
+    0% { transform: translate(1px, 2px) rotate(0deg); }
+    10% { transform: translate(-1px, -3px) rotate(-2deg); }
+    20% { transform: translate(-3px, 0px) rotate(2deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(2deg); }
+    50% { transform: translate(-1px, 2px) rotate(-2deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-2deg); }
+    80% { transform: translate(-1px, -1px) rotate(2deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
