--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+   }
+
 .application {
     font-family: "Microsoft YaHei", 黑体, 宋体, sans-serif !important;
 }
@@ -6,6 +11,33 @@
     border: 1px solid rgba(0,0,0, .12);
 }
 
+.site_logo{
+    display: flex;
+    align-items: center;
+    width: 460px;
+    height: 100px;
+    overflow: hidden;
+
+}
+.blurbox{
+    background: inherit;
+    position: relative;
+    border-radius: 8px;
+    z-index:4;
+    box-shadow: inset 0 0 300px rgba(255, 255, 255, 0.6);
+}
+
+.blurbox:before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    filter: blur(10px);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+}
 .v-card.outlined{
   border-radius: 6px;
   box-shadow:  inset 0px 0px 1px 0px rgba(0,0,0,0.4);
@@ -13,6 +45,26 @@
 
 .v-breadcrumbs li:nth-child(2n){
     padding:0 4px;
+}
+
+.v-card.product_detail_box {
+    position: relative;
+    display: flex;
+    align-items: flex-end;
+    background-color: transparent;
+    box-shadow:none;
+    z-index: 2;
+}
+
+.product_detail_box:after{
+    content:'';
+    position: absolute; 
+    left:1rem; 
+    bottom: 15%; 
+    width:calc(100% + 2rem); 
+    height: 10px; 
+    background-color: gold; 
+    z-index:-1;
 }
 
 .swing{
